# OOCatcher

./: CMakeLists.txt
Final/: Body.cpp  Body.h  Point.cpp  README.txt  Segment.cpp  Segment.h  snowball_mode.cpp  walker_mode.cpp
Preliminary/: Body.cpp  Body.h  Point.cpp  Point.h  README.txt  Segment.cpp  Segment.h  main.cpp
